[package]
name = "hyper-trust-dns"
version = "0.2.0-alpha.1"
authors = ["Jasper Bryant-Greene <jbg@rf.net.nz>"]
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
hyper = "0.13.0-alpha.4"
trust-dns-resolver = { version = "0.12", default-features = false, features = ["tokio", "dnssec-ring"] }
